# tickrs

./: .editorconfig  .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  create.sql
.github/: renovate.json
.github/actions/setup/: action.yml
.github/workflows/: build.yml  deploy.yml  test.yml
src/: main.rs
templates/: index.html
