[package]
name = "tickrs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "^3.9.0"
actix-web = "^4.9.0"
actix-cors = "^0.7.0"
actix-web-prom = { version = "^0.9.0", features = ["process"] }
anyhow = "^1.0.86"
askama = "^0.12.1"
askama_actix = "^0.14.0"
chrono = { version = "^0.4.38", features = ["std"] }
dotenvy = "^0.15.7"
lazy_static = "^1.5.0"
nanoid = "^0.4.0"
prometheus = "^0.13.4"
serde = { version = "^1.0.210", features = ["derive"] }
serde_json = "^1.0.128"
sqlx = { version = "^0.8.2", features = ["sqlite", "chrono", "runtime-tokio"] }

[features]
default = ["askama/serde-json"]
