[package]
name = "tickrs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-http = "3.12.1"
actix-web = "4.13.0"
actix-web-prom = { version = "0.10", features = ["process"] }
anyhow = "1.0.102"
askama = "0.15.6"
chrono = { version = "0.4.44", features = ["std"] }
dotenvy = "0.15.7"
nanoid = "0.4.0"
prometheus = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }

[features]
default = ["askama/serde_json"]
